--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ aside {
 .grid-item img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 768px) {
