--- a/css/dogs.css
+++ b/css/dogs.css
@@ -75,8 +75,7 @@ footer {
 }
 
 aside {
-    width: 20%;
-    /* Set the width */
+    width: 20%; /* Set the width */
     background-color: #f2f2f2;
     float: right;
     padding: 20px;
@@ -85,6 +84,34 @@ aside {
 .main-content {
     width: 80%;
     flex: 1;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr; 
+    grid-gap: 10px;
+    margin: auto; /* Center the grid */
+    height: 100%; /* Ensure grid container takes full height of its parent */
+}
+
+.grid-item {
+    width: 300px;
+    height: 300px;
+    background-color: #fff; /* Optionally, set a background color for grid items */
+    padding: 10px;
+    text-align: center;
+    overflow: hidden; /* Hide overflow content */
+    box-sizing: border-box; /* Ensure padding doesn't affect the size of grid items */
+    display: flex; /* Make grid items flex containers */
+    align-items: center; /* Vertically center content */
+    justify-content: center; /* Horizontally center content */
+}
+  
+.grid-item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 768px) {
@@ -148,9 +175,11 @@ aside {
         color: #fff;
         cursor: pointer;
     }
-
     aside {
-        display: none;
-        /* Hide the aside */
+        display: none; /* Hide the aside */
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr); /* 1 column for screens <= 768px */
     }
 }
