--- a/css/contact.css
+++ b/css/contact.css
@@ -87,7 +87,7 @@ aside {
 }
 
 .contact-form {
-    max-width: 400px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -107,6 +107,12 @@ aside {
 
 .contact-form input[type="submit"]:hover {
     background-color: #1b0751;
+}
+
+/* Prevent textarea resizing */
+textarea {
+    resize: none;
+    width: 400px;
 }
 
 @media only screen and (max-width: 768px) {
