--- a/css/contact.css
+++ b/css/contact.css
@@ -117,7 +117,7 @@ aside {
 /* Prevent textarea resizing */
 textarea {
     resize: none;
-    width: 400px;
+    width: 300px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -134,6 +134,7 @@ textarea {
         width: 100%;
         display: flex;
         flex-direction: column;
+        position: relative;
     }
 
     ul {
@@ -196,9 +197,9 @@ textarea {
         justify-content: center; /* Align items vertically to the center */
         align-items: center; /* Align items horizontally to the center */
         cursor: pointer; /* Add cursor pointer for better UX */
-        position: fixed; /* Position the toggle button */
+        position: absolute; /* Position the toggle button */
         top: 10px; /* Adjust the top position as needed */
-        right: 10px; /* Adjust the right position as needed */
+        right: 30px; /* Adjust the right position as needed */
         z-index: 999; /* Ensure the toggle button is above other content */
     }
 
