--- a/css/contact.css
+++ b/css/contact.css
@@ -45,9 +45,11 @@ button:hover {
 /* Prevent textarea resizing */
 textarea {
     resize: none;
-    width: 300px;
+    width: 400px;
 }
 
 @media only screen and (max-width: 768px) {
-    
+    textarea {
+        width: 300px;
+    }
 }
